<resources>
    <string name="app_name">IMSP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_lable">Логин</string>
    <string name="login_hint">User@mail.ru</string>
    <string name="pwd_lable">Пароль</string>
    <string name="pwd_hint">Ваш пароль</string>
    <string name="login_btn_text">Войти</string>
</resources>