<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="100dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_lable"></TextView>

    <EditText
        android:id="@+id/logitET"
        android:hint="@string/login_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd_lable">
        </TextView>


    <EditText
        android:id="@+id/pwdET"
        android:hint="@string/pwd_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <Button
        android:id="@+id/loginBtn"
        android:background="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/login_btn_text"></Button>

</LinearLayout>